--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "keywords": ["calendar"],
   "license": "MIT",
   "require": {
+    "php": ">=5.4",
     "nesbot/carbon": "~1.0"
   },
   "require-dev" : {
