--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,17 @@
 {
   "name": "carvefx/calendar",
+  "type": "library",
   "description": "Simple PHP Calendar Library",
   "keywords": ["calendar"],
   "license": "MIT",
+  "authors": [
+      {
+          "name": "Adrian Mihai",
+          "email": "adrian@carve.ro",
+          "homepage": "http://www.carve.ro",
+          "role": "Developer"
+      }
+  ],
   "require": {
     "php": ">=5.4",
     "nesbot/carbon": "~1.0"
