--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "nesbot/carbon": "~1.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "2.0.*@dev"
+        "phpspec/phpspec": "^3.0"
     },
     "autoload": {
         "psr-0": {
