--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,20 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
-        "nesbot/carbon": "^1.26"
+        "php": ">=7.2",
+        "nesbot/carbon": "^2.24"
     },
     "require-dev": {
-        "phpspec/phpspec": "^4.0"
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
-        "psr-0": {
-            "Carvefx\\Calendar": "src"
+        "psr-4": {
+            "Calendar\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests"
         }
     }
 }
