--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,4 @@ script:
   - vendor/bin/phpunit
 
 after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT; fi
