--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,8 +33,8 @@ jobs:
         uses: shivammathur/setup-php@v1
         with:
           php-version: ${{ matrix.php }}
-          extension: mbstring, pdo, pdo_sqlite
-          coverage: none
+          extension: mbstring, intl
+          coverage: xdebug
 
       - name: Install dependencies
         run: |
