--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,12 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
+        "php": "^8.0",
         "nesbot/carbon": "^2.24"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0"
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
@@ -28,5 +29,15 @@
         "psr-4": {
             "Tests\\": "tests"
         }
-    }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit",
+        "test-coverage": "vendor/bin/phpunit --coverage",
+        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
